--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="green">#4CAF50</color>
     <color name="grey">#8E988E</color>
 
+    <color name="red">#E91E63</color>
+    <color name="blue2">#3F51B5</color>
+    <color name="yellow">#FFC107</color>
+
 </resources>
