--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,27 @@
     <style name="Base.Theme.MvvmCoroutineRetrofit" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+    <!-- For reference from old project themes -->
+            <!-- Primary brand color. -->
+<!--            <item name="colorPrimary">@color/purple_500</item>-->
+<!--            <item name="colorPrimaryVariant">@color/purple_700</item>-->
+<!--            <item name="colorOnPrimary">@color/white</item>-->
+            <!-- Secondary brand color. -->
+<!--            <item name="colorSecondary">@color/teal_200</item>-->
+<!--            <item name="colorSecondaryVariant">@color/teal_700</item>-->
+<!--            <item name="colorOnSecondary">@color/black</item>-->
+            <!-- Status bar color. -->
+            <item name="android:statusBarColor">@color/black</item>
+            <!-- Customize your theme here. -->
+        <!-- For reference from old project themes -->
     </style>
 
     <style name="Theme.MvvmCoroutineRetrofit" parent="Base.Theme.MvvmCoroutineRetrofit" />
+
+    <style name="RoundedCorner" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">10%</item>
+    </style>
+
 </resources>
